dnl Process this file with autoconf to produce a configure script.

dnl 
dnl $Id$
dnl Copyright (C) 2003 The Free Software Foundation
dnl 
dnl This file is part of GNU classpathx activation.
dnl 
dnl GNU classpathx is free software; you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by the
dnl Free Software Foundation; either version 2, or (at your option) any
dnl later version.
dnl  
dnl GNU classpathx is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with GNU JavaMail; see the file COPYING.  If not, write to the
dnl Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
dnl 02110-1301 USA. 
dnl

AC_INIT(activation, 1.0)
AC_CONFIG_SRCDIR(source/javax/activation/DataSource.java)
AM_INIT_AUTOMAKE

PACKAGE="activation"
VERSION="1.0"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_PROG_JAVAC
AC_PROG_JAR
AC_PROG_JAVADOC
AC_JAVA_OPTIONS
AC_CHECK_CLASSPATH

AC_CONFIG_FILES(Makefile)

AC_OUTPUT

